# algebraic-datatypes.cpp

./: CMakeLists.txt  README.md  algebraic_datatypes.hpp  main.cpp
include/: algebraic_datatypes.hpp  policies.hpp  types.hpp
include/detail/: utility.hpp
include/policies/: std.hpp  unwrap.hpp
